Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2991

SessionManager incorrectly releasing sessions back to pool

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.1.0
    • Core
    • None

    Description

      We've seen an issue where Traffic Server receives a response w/ a Connection: Close header followed by an EOS caused by a TCP FIN. What happens is that the tunnel_hander_server() is incorrectly keeping the connection open due to the EOS code path not detecting the connection close. This results in failed connections and other weird transient issues. Patch incoming.

      Attachments

        Activity

          People

            briang Brian Geffon
            briang Brian Geffon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: