TS-2991: SessionManager incorrectly releasing sessions back to pool